--- a/api/experiencenash/src/.env
+++ b/api/experiencenash/src/.env
@@ -1,4 +1,4 @@
 JWT_SECRET=@QEGTUI
 
-AWS_ACCESS_KEY=bYo6hKRJF/m6Lu8UaTQ5utcTtiTKbg9naS9eTemg
-AWS_KEY_ID=AKIAQFS73HWLOUWWCS5G
+AWS_ACCESS_KEY=
+AWS_KEY_ID=
