--- a/api/experiencenash/package.json
+++ b/api/experiencenash/package.json
@@ -16,18 +16,22 @@
       "@types/jsonwebtoken": "^8.5.0",
       "@types/lodash": "^4.14.167",
       "@types/multer-s3": "^2.7.9",
+      "@types/pg": "^7.14.8",
       "aws-sdk": "^2.824.0",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.18.1",
       "class-validator": "^0.12.2",
+      "dotenv": "^8.2.0",
       "express": "^4.15.4",
       "helmet": "^4.3.1",
       "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.20",
+      "moment": "^2.29.1",
       "multer": "^1.4.2",
       "multer-s3": "^2.9.0",
       "mysql": "^2.14.1",
       "nodemon": "^2.0.6",
+      "pg": "^8.5.1",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.2.29"
    },
