--- a/api/experiencenash/website/package.json
+++ b/api/experiencenash/website/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-draft-wysiwyg": "^1.13.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/request": "^2.48.5",
     "@types/styled-components": "^5.1.7",
@@ -18,6 +19,7 @@
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
