--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,37 @@
-api/node_modules
-api/experiencenash/src/.env
+node_modules
+experiencenash/src/.env
 
-api/experiencenash/.idea/
-api/experiencenash/.vscode/
-api/experiencenash/node_modules/
-api/experiencenash/build/
-api/experiencenash/tmp/
-api/experiencenash/temp/
+experiencenash/.idea/
+experiencenash/.vscode/
+experiencenash/node_modules/
+experiencenash/build/
+experiencenash/tmp/
+experiencenash/temp/
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-api/experiencenash/website/node_modules
-api/experiencenash/website/.pnp
-api/experiencenash/website/.pnp.js
+experiencenash/website/node_modules
+experiencenash/website/.pnp
+experiencenash/website/.pnp.js
 
 # testing
-api/experiencenash/website/coverage
+experiencenash/website/coverage
 
 # production
-api/experiencenash/website/build
+experiencenash/website/build
 
 # misc
-api/experiencenash/website/.DS_Store
-api/experiencenash/website/.env.local
-api/experiencenash/website/.env.development.local
-api/experiencenash/website/.env.test.local
-api/experiencenash/website/.env.production.local
+experiencenash/website/.DS_Store
+experiencenash/website/.env.local
+experiencenash/website/.env.development.local
+experiencenash/website/.env.test.local
+experiencenash/website/.env.production.local
 
-api/experiencenash/website/npm-debug.log*
-api/experiencenash/website/yarn-debug.log*
-api/experiencenash/website/yarn-error.log*
+experiencenash/website/npm-debug.log*
+experiencenash/website/yarn-debug.log*
+experiencenash/website/yarn-error.log*
 
 
 
-api/experiencenash/.env
+experiencenash/.env
