--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,10 @@
     "**/coverge": true
   },
   "editor.formatOnSave": true,
-  "typescript.tsdk": "./api/node_modules/typescript/lib",
+  "typescript.tsdk": "./node_modules/typescript/lib",
   "eslint.workingDirectories": [
-    "./api",
-    "./api/website",
+    ".",
+    "./website",
   ],
   "colorTabs.titleBackground": true,
   "debug.node.autoAttach": "on",
