--- a/experiencenash/website/package.json
+++ b/experiencenash/website/package.json
@@ -7,20 +7,25 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/draft-js": "^0.10.44",
     "@types/jest": "^26.0.19",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-draft-wysiwyg": "^1.13.1",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-rte": "^0.16.1",
     "@types/request": "^2.48.5",
     "@types/styled-components": "^5.1.7",
     "antd": "^4.9.4",
+    "draft-js": "^0.11.7",
+    "es6-shim": "^0.35.6",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
+    "react-rte": "^0.16.3",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
