--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
    },
    "scripts": {
       "typeorm": "TS_NODE_TRANSPILE_ONLY=true ts-node ./node_modules/typeorm/cli.js",
-      "dev": "nodemon src/app.ts"
+      "dev": "nodemon src/app.ts",
+      "start": "nodemon src/app.ts"
    }
 }
