--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
    "scripts": {
       "typeorm": "TS_NODE_TRANSPILE_ONLY=true ts-node ./node_modules/typeorm/cli.js",
       "dev": "nodemon src/app.ts",
-      "start": "node dist/server.js"
+      "start": "node dist/app.js"
    }
 }
